--- a/JWDataTrackerWeb/src/app/app.component.html
+++ b/JWDataTrackerWeb/src/app/app.component.html
@@ -1,3 +1,23 @@
-<div>
-  <h1>HELLO WORLD!</h1>
+<div class="d-block" *ngIf="responsivehelper">
+  <div class="d-none d-sm-none d-md-none d-lg-none d-xl-none d-xxl-block">
+    XXL Screen
+  </div>
+  <div class="d-none d-sm-none d-md-none d-lg-none d-xl-block d-xxl-none">
+    XL Screen
+  </div>
+  <div class="d-none d-sm-none d-md-none d-lg-block d-xl-none d-xxl-none">
+    LG Screen
+  </div>
+  <div class="d-none d-sm-none d-md-block d-lg-none d-xl-none d-xxl-none">
+    MD Screen
+  </div>
+  <div class="d-none d-sm-block d-md-none d-lg-none d-xl-none d-xxl-none">
+    SM Screen
+  </div>
+  <div class="d-block d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none">
+    XS Screen
+  </div>
+</div>
+<div class="w-100">
+  <router-outlet></router-outlet>
 </div>
