--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -1,1 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* You can add global styles to this file, and also import other style files */
+html {
+    font-family:'Noto Sans';
+}
+body{
+    background: #F8F8F8;
+    margin:0;
+    padding:0;
+}
+
+input, button{
+    font-family: 'Noto Sans';
+}
+
+.form-control{
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: 1px solid rgba(0, 0, 0, 0.41);
+}
+
+.btn.btn-default{
+    background: #D9D9D9;
+}
+
+.btn:hover{
+    cursor: pointer;
+}
+
+.btn:active{
+    z-index: 1;
+}
+
+.btn{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: .5rem;
+    border: 0px;
+    font-size:18px;
+    font-weight: 700;
+}
+
+.btn-link {
+    color:black;
+    text-align: left !important;
+    font-size:16px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { }
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {  }
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) { }
