fix navigation header layout and added initial dashboard content

--- a/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-dashboard-works
+<div class="d-flex justify-content-center mt-2 mb-5">
+    <div class="col-12 col-xl-12 col-xxl-9 p-2">
+        <app-mid-week-schedule-panel></app-mid-week-schedule-panel>
+    </div>
+</div>
