added web config and additional panels for dashboard

--- a/JWDataTrackerWeb/src/app/pages/dashboard/mid-week-schedule-panel/mid-week-schedule-panel.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/mid-week-schedule-panel/mid-week-schedule-panel.component.html
@@ -1,14 +1,14 @@
 <div class="card m-1">
     <div class="card-header">
         <div class="row">
-            <div class="col-8 col-md-6">
+            <div class="col-10">
                 <h3 class="m-0 p-0">Mid Week Meeting Schedule</h3>
                 <label>
                     <i class='bx bx-calendar' ></i>
                     Friday, June 17, 2022
                 </label>
             </div>
-            <div class="col-4 col-md-6 d-flex align-items-center justify-content-end">
+            <div class="col-2 d-flex align-items-center justify-content-end">
                 <button class="btn btn-default">
                     <i class='bx bx-edit' ></i>
                 </button>
