--- a/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.scss
+++ b/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.scss
@@ -38,7 +38,7 @@
     text-decoration: none;
     font-size:18px;
     color:#505050;
-    margin-left: 1.5rem;
+    margin-left: .5rem;
     margin-right:1rem;
 }
 
