--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -82,6 +82,30 @@ input, button{
     background: #3E85FC !important;
 }
 
+.bg-green {
+    background: #269429 !important;
+}
+
+.bg-secondary-blue{
+    background: #265A94 !important;
+}
+
+.bg-brown {
+    background: #945A26 !important;
+}
+
+.bg-purple {
+    background: #942688 !important;
+}
+
+.bg-lime {
+    background: #909426 !important;
+}
+
+.tile {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .text-white{
     color:white !important; 
 }
