--- a/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,19 @@
-<div class="d-flex justify-content-center mt-2 mb-5">
-    <div class="col-12 col-xl-12 col-xxl-9 p-2">
-        <app-mid-week-schedule-panel></app-mid-week-schedule-panel>
+<div class="container">
+    <div class="row mt-2 mb-5">
+        <div class="col-12 p-2 mb-2">
+            <app-mid-week-schedule-panel></app-mid-week-schedule-panel>
+        </div>
+        <div class="col-12 col-lg-6 mb-2">
+            <app-weekend-meeting-schedule-panel></app-weekend-meeting-schedule-panel>
+        </div>
+        <div class="col-12 col-lg-6 mb-2">
+            <app-congregation-stats></app-congregation-stats>
+        </div>
+        <div class="col-12 col-lg-6 mb-2">
+            <app-publisher-analysis-panel></app-publisher-analysis-panel>
+        </div>
+        <div class="col-12 col-lg-6 mb-2">
+            <app-meeting-attendance-summary-panel></app-meeting-attendance-summary-panel>
+        </div>
     </div>
 </div>
