fix navigation adn added viewport to avoid zooming

--- a/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -1,10 +1,10 @@
 <div class="nav">
     <div class="container">
         <div class="row w-100 p-2">
-            <div class="col-6 col-md-12 col-lg-3 col-xl-6 d-flex align-items-center my-2 ">
+            <div class="col-6 col-md-12 col-lg-3 d-flex align-items-center my-2 ">
                 <h3 class="m-0 p-0 text-md-center text-lg-start w-100">DataTracker</h3>
             </div>
-            <div class="d-none d-md-block col-12 col-lg-9 col-xl-6">
+            <div class="d-none d-md-block col-12 col-lg-9">
                 <div class="row">
                     <div class="col-12 d-flex align-items-center justify-content-end">
                         <div class="menu-item w-100">
@@ -15,7 +15,7 @@
                             <a [routerLink]="['/users']" [routerLinkActive]="['link-active']">Users</a>
                             <div class="menu-user">
                                 <a [routerLink]="['/users']" [routerLinkActive]="['link-active']">Arnel Dela Cruz</a>
-                                <div class="profile-pic"></div>
+                                <button class="btn btn-default">Logout</button>
                             </div>  
                         </div>                        
                     </div>
