--- a/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -1,7 +1,9 @@
+
+
 <div class="nav">
     <div class="container">
-        <div class="row w-100 p-2">
-            <div class="col-6 col-md-12 col-lg-3 d-flex align-items-center my-2 ">
+        <div class="row p-2">
+            <div class="col-6 col-md-12 col-lg-3 align-items-center my-2 ">
                 <h3 class="m-0 p-0 text-md-center text-lg-start w-100">DataTracker</h3>
             </div>
             <div class="d-none d-md-block col-12 col-lg-9">
