Login functionality and CORS

--- a/JWDataTrackerWeb/src/app/app.component.html
+++ b/JWDataTrackerWeb/src/app/app.component.html
@@ -18,4 +18,5 @@
     XS Screen
   </div>
 </div>
+<app-loading-screen [isLoading]="isLoading"></app-loading-screen>
 <router-outlet></router-outlet>
