--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -111,6 +111,10 @@ input, button{
     color:white !important; 
 }
 
+.text-red {
+    color: #942926;
+}
+
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) { }
 
