--- a/JWDataTrackerWeb/src/app/pages/dashboard/meeting-attendance-summary-panel/meeting-attendance-summary-panel.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/meeting-attendance-summary-panel/meeting-attendance-summary-panel.component.html
@@ -1,14 +1,22 @@
 <div class="card mb-3">
+    <div class="card-header">
+      <div class="row">
+          <div class="col-10">
+              <h3 class="m-0 p-0">Average Meeting Attendance</h3>
+              <label>
+                  <i class='bx bx-calendar' ></i>
+                  January - June 2022
+              </label>
+          </div>
+          <div class="col-2 d-flex align-items-center justify-content-end">
+              <button class="btn btn-default">
+                  <i class='bx bx-edit' ></i>
+              </button>
+          </div>
+      </div>
+  </div>  
     <div class="card-body p-3">
       <div class="row">
-        <div class="col-12">
-          <div class="text-center mb-4">
-            <label class="fs-3 fw-lighter fst-italic"
-              >Average Meeting Attendance</label
-            ><br />
-            <label class="m-0 p-0">January - June 2022</label>
-          </div>
-        </div>
         <div class="d-flex justify-content-center">
           <div class="col-12 col-md-6 p-3">
             <div class="d-flex justify-content-between">
