--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -15,6 +15,7 @@ input, button{
 }
 
 .form-control{
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
