added dialog, fix cors

--- a/JWDataTrackerWeb/src/app/app.component.html
+++ b/JWDataTrackerWeb/src/app/app.component.html
@@ -18,5 +18,6 @@
     XS Screen
   </div>
 </div>
+<div kendoDialogContainer></div>
 <app-loading-screen [isLoading]="isLoading"></app-loading-screen>
 <router-outlet></router-outlet>
