--- a/JWDataTrackerWeb/src/app/pages/publishers/publishers.component.html
+++ b/JWDataTrackerWeb/src/app/pages/publishers/publishers.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4 my-5">
     <div class="col-12 d-flex align-items-center justify-content-between mb-3">
         <input type="text" class="form-control" placeholder="Search Publisher." style="width:30%"/>
-        <button class="btn btn-default">Add Publisher</button>
+        <button class="btn btn-default" (click)="openPublisherModal()">Add Publisher</button>
     </div>
     <div class="col-12 shadow">
         <kendo-grid 
