--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -45,7 +45,7 @@ input, button{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: .5rem;
     border: 0px;
-    font-size:18px;
+    font-size:14px;
     font-weight: 700;
 }
 
@@ -114,6 +114,11 @@ input, button{
 
 .text-red {
     color: #942926;
+}
+
+.k-dialog-titlebar{
+    background: #F2F1EF !important;
+    color: black !important;
 }
 
 // Small devices (landscape phones, 576px and up)
