grid and adding and editing of publisher

--- a/JWDataTrackerWeb/src/app/pages/login/login.component.html
+++ b/JWDataTrackerWeb/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="loginForm" *ngIf="loginForm" (submit)="submit()">
     <div class="container" style="height:98vh">
-        <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="d-flex justify-content-center align-items-center h-100 p-3">
             <div class="col-12 col-md-6 col-lg-5 col-xl-4 py-5 logincontainer p-3 d-flex justify-content-center align-items-center flex-column">
                     <h1 class="m-0 p-0">Data Tracker</h1>
                     <label class="text-red my-2">{{message}}</label>
