--- a/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -24,10 +24,36 @@
                 </div>           
             </div>
             <div class="col-6 d-block d-md-none">
-                <button class="btn btn-default d-flex align-items-center float-end">
+                <button class="btn btn-default d-flex align-items-center float-end" (click)="showMenu = true">
                     <i class='bx bx-menu fs-4'></i>
                 </button>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="d-block d-md-none sliding_menu animate__animated animate__faster" [ngClass]="{ 'animate__slideInRight' : showMenu, 'animate__slideOutRight' : !showMenu }">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 p-3">
+                <button class="btn btn-default float-end" (click)="showMenu = false">
+                    <i class='bx bx-arrow-back fs-4'></i>
+                </button>
+            </div>
+
+            <div class="col-12 d-flex align-items-center justify-content-end my-5">
+                <div class="menu-item w-100 flex-column">
+                    <a class="my-2" [routerLink]="['/dashboard']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Dashboard</a>
+                    <a class="my-2" [routerLink]="['/meetings']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Meetings</a>
+                    <a class="my-2" [routerLink]="['/publishers']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Publishers</a>
+                    <a class="my-2" [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Reports</a>
+                    <a class="my-2" [routerLink]="['/users']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Users</a>
+                    <hr style="width:100%;"/>
+                    <a class="my-2" [routerLink]="['/users']" [routerLinkActive]="['link-active']">{{fullname}}</a>
+                    <button class="btn btn-default my-2" (click)="logout();">Logout</button>
+                    
+                </div>                        
+            </div>            
         </div>
     </div>
 </div>
