--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -12,11 +12,16 @@ body{
 
 input, button{
     font-family: 'Noto Sans';
+    margin: 0;
 }
-
+.form-control.ng-invalid.ng-touched {
+    border-color:red;
+}
 .form-control{
+    display:block;
+    width: 100%;;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-    padding: 0.375rem 0.75rem;
+    padding: 0.375rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -27,6 +32,11 @@ input, button{
     -moz-appearance: none;
     appearance: none;
     border: 1px solid rgba(0, 0, 0, 0.41);
+}
+
+.form-label {
+    margin-bottom: 0.5rem;
+    font-size: 18px;
 }
 
 .btn.btn-default{
