--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -41,6 +41,7 @@ input, button{
 
 .btn.btn-default{
     background: #D9D9D9;
+    color:rgb(41, 41, 41);
 }
 
 .btn:hover{
@@ -57,6 +58,8 @@ input, button{
     border: 0px;
     font-size:14px;
     font-weight: 700;
+    display: flex;
+    align-items: center;
 }
 
 .btn-link {
@@ -96,6 +99,10 @@ input, button{
 
 .bg-green {
     background: #269429 !important;
+}
+
+.text-green {
+    color: #269429 !important;
 }
 
 .bg-secondary-blue{
