--- a/JWDataTrackerWeb/src/app/pages/publishers/publishers.component.html
+++ b/JWDataTrackerWeb/src/app/pages/publishers/publishers.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-4 my-5">
+<div class="container-lg mt-4 my-5">
     <div class="col-12">
-        <app-grid [pageGrid]="publisherPageGrid" [onLoadGrid]="loadDataGrid" [onAdd]="openPublisherModal" [gridTitle]="'Publishers'" [addButtonTitle]="'Add Publisher'" ></app-grid>
+        <app-grid [pageGrid]="publisherPageGrid" [onLoadGrid]="loadDataGrid" [onEdit]="openPublisherModal" [onAdd]="openPublisherModal" [gridTitle]="'Publishers'" [addButtonTitle]="'Add Publisher'" [mobileViewComponent]="'PublisherGridCardComponent'"></app-grid>
     </div>
 </div>
