added api for mid week service, added ui for mid week meeting display and modal for form

--- a/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -11,7 +11,7 @@
                     <div class="col-12 d-flex align-items-center justify-content-end">
                         <div class="menu-item w-100">
                             <a [routerLink]="['/dashboard']" [routerLinkActive]="['link-active']">Dashboard</a>
-                            <a [routerLink]="['/meetings']" [routerLinkActive]="['link-active']">Meetings</a>
+                            <a [routerLink]="['/midweekmeeting']" [routerLinkActive]="['link-active']">Meetings</a>
                             <a [routerLink]="['/publishers']" [routerLinkActive]="['link-active']">Publishers</a>
                             <a [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']">Reports</a>
                             <a [routerLink]="['/users']" [routerLinkActive]="['link-active']">Users</a>
@@ -44,7 +44,7 @@
             <div class="col-12 d-flex align-items-center justify-content-end my-5">
                 <div class="menu-item w-100 flex-column">
                     <a class="my-2" [routerLink]="['/dashboard']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Dashboard</a>
-                    <a class="my-2" [routerLink]="['/meetings']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Meetings</a>
+                    <a class="my-2" [routerLink]="['/midweekmeeting']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Meetings</a>
                     <a class="my-2" [routerLink]="['/publishers']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Publishers</a>
                     <a class="my-2" [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Reports</a>
                     <a class="my-2" [routerLink]="['/users']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Users</a>
