--- a/JWDataTrackerWeb/src/styles.scss
+++ b/JWDataTrackerWeb/src/styles.scss
@@ -60,6 +60,7 @@ input, button{
     font-weight: 700;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .btn-link {
