--- a/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
@@ -1,32 +1,36 @@
 <div class="row px-3">
     <div class="col-12 d-flex flex-column justify-content-between align-items-center border-bottom border-secondary pb-3">
         <h3 class="m-0 p-2">Mid Week Schedule</h3>
-        <div class="col-12 col-md-4 col-lg-3 col-xl-4">
-            <input type="date" class="form-control" style="width:94%"/>
+        <div class="col-12 col-md-2">
+            <kendo-datepicker [(ngModel)]="midWeekSchedule.scheduledDate" (ngModelChange)="onScheduleDateChange()"></kendo-datepicker>
         </div>
     </div>
-    <div class="col-12 mt-2 d-flex justify-content-center">
-        <div class="col-12 col-md-8 col-lg-5 col-xl-8">
-            <div *ngIf="currentCategory === midWeekCategories.OPENING" class="bg-default p-2 text-center mb-2" style="font-weight:700">
-                <h3 class="p-0 m-0">Opening</h3>
-            </div>
-            <div *ngIf="currentCategory === midWeekCategories.TREASUREFROMGODSWORD" class="bg-gray p-2 text-white text-center mb-2" style="font-weight:700">
-                <h3 class="p-0 m-0">TREASURE FROM GOD’S WORD</h3>
-            </div>
-            <div *ngIf="currentCategory === midWeekCategories.APPLYYOURSELFTOTHEFIELDMINISTRY" class="bg-yellow p-2 text-white text-center mb-2" style="font-weight:700">
-                <h3 class="p-0 m-0">Apply Yourself To The Field Ministry</h3>
-            </div>
-            <div *ngIf="currentCategory === midWeekCategories.LIVINGASACHRISTIAN" class="bg-red p-2 text-white text-center mb-2" style="font-weight:700">
-                <h3 class="p-0 m-0">Living as a Christian</h3>
-            </div>
-            <div *ngIf="currentCategory === midWeekCategories.ATTENDANTS" class="bg-blue p-2 text-white text-center mb-2" style="font-weight:700">
-                <h3 class="p-0 m-0">Attendants</h3>
-            </div>
-            <div class="d-flex align-items-center justify-content-between py-2 border-bottom border-secondary" style="column-gap:1rem" *ngFor="let scheduleItem of loadSchedulesByCategory()">
+</div>
+
+<div class="row mt-2">
+    <div class="col-12 col-md-8 col-xxl-6">
+        <div *ngIf="currentCategory === midWeekCategories.OPENING" class="bg-default p-2 text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">Opening</h3>
+        </div>
+        <div *ngIf="currentCategory === midWeekCategories.TREASUREFROMGODSWORD" class="bg-gray p-2 text-white text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">TREASURE FROM GOD’S WORD</h3>
+        </div>
+        <div *ngIf="currentCategory === midWeekCategories.APPLYYOURSELFTOTHEFIELDMINISTRY" class="bg-yellow p-2 text-white text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">Apply Yourself To The Field Ministry</h3>
+        </div>
+        <div *ngIf="currentCategory === midWeekCategories.LIVINGASACHRISTIAN" class="bg-red p-2 text-white text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">Living as a Christian</h3>
+        </div>
+        <div *ngIf="currentCategory === midWeekCategories.ATTENDANTS" class="bg-blue p-2 text-white text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">Attendants</h3>
+        </div>
+        <div class="row py-2 border-bottom border-secondary" *ngFor="let scheduleItem of loadSchedulesByCategory()">
+            <div class="col-md-4 col-12">
                 <label>{{scheduleItem.role}}: </label>
-                <div style="width:50%" *ngIf="currentCategory !== midWeekCategories.ATTENDANTS && !scheduleItem.withPartner">
+            </div>
+            <div class="col-md-8 col-12" *ngIf="currentCategory !== midWeekCategories.ATTENDANTS && !scheduleItem.withPartner">
+                <div class="d-flex align-items-center mb-2" style="column-gap:10px;" *ngIf="!scheduleItem.isForElderMs">
                     <kendo-dropdownlist 
-                        *ngIf="!scheduleItem.isForElderMs"
                         [data]="filteredPublisher"
                         [filterable]="true"
                         textField="fullName"
@@ -36,8 +40,15 @@
                         (ngModelChange)="onModelChange(scheduleItem)"
                         >
                     </kendo-dropdownlist>
+                    <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
+                        <i class='bx bx-x' ></i>
+                    </button>
+                    <button class="btn btn-default">
+                        <i class='bx bx-history'></i>
+                    </button>
+                </div>
+                <div class="d-flex align-items-center mb-2" style="column-gap:10px;" *ngIf="scheduleItem.isForElderMs">
                     <kendo-dropdownlist 
-                        *ngIf="scheduleItem.isForElderMs"
                         [data]="filteredElderMs"
                         [filterable]="true"
                         textField="fullName"
@@ -46,8 +57,16 @@
                         [(ngModel)]="scheduleItem.publisher"
                         (ngModelChange)="onModelChange(scheduleItem)">
                     </kendo-dropdownlist>
+                    <button class="btn bg-red text-white"  (click)="clearValue(scheduleItem,'publisher')">
+                        <i class='bx bx-x' ></i>
+                    </button>
+                    <button class="btn btn-default">
+                        <i class='bx bx-history'></i>
+                    </button>                    
                 </div>
-                <div style="width:50%"  *ngIf="currentCategory !== midWeekCategories.ATTENDANTS && scheduleItem.withPartner">
+            </div>
+            <div class="col-md-8 col-12"  *ngIf="currentCategory !== midWeekCategories.ATTENDANTS && scheduleItem.withPartner">
+                <div class="d-flex align-items-center mb-2" style="column-gap:10px;">
                     <kendo-dropdownlist style="margin-bottom:.5rem"
                         [data]="filteredPublisher"
                         [filterable]="true"
@@ -57,7 +76,15 @@
                         [(ngModel)]="scheduleItem.publisher"
                         (ngModelChange)="onModelChange(scheduleItem)"
                     >
-                    </kendo-dropdownlist>
+                    </kendo-dropdownlist> 
+                    <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
+                        <i class='bx bx-x' ></i>
+                    </button> 
+                    <button class="btn btn-default">
+                        <i class='bx bx-history'></i>
+                    </button>                  
+                </div>
+                <div class="d-flex align-items-center mb-2" style="column-gap:10px;">
                     <kendo-dropdownlist style="margin-bottom:.5rem"
                         [data]="filteredPublisher"
                         [filterable]="true"
@@ -68,8 +95,16 @@
                         (ngModelChange)="onModelChange(scheduleItem,true)"
                         >
                     </kendo-dropdownlist>
+                    <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'partnerPublisher');onModelChange(scheduleItem,true)">
+                        <i class='bx bx-x' ></i>
+                    </button>
+                    <button class="btn btn-default">
+                        <i class='bx bx-history'></i>
+                    </button>                        
                 </div>
-                <div style="width:50%"  *ngIf="currentCategory === midWeekCategories.ATTENDANTS && scheduleItem.withPartner">
+            </div>
+            <div class="col-md-8 col-12"  *ngIf="currentCategory === midWeekCategories.ATTENDANTS && scheduleItem.withPartner">
+                <div class="d-flex align-items-center mb-2" style="column-gap:10px;">
                     <kendo-dropdownlist style="margin-bottom:.5rem"
                         [data]="filteredAttendants"
                         [filterable]="true"
@@ -80,6 +115,14 @@
                         (ngModelChange)="onModelChangeForAttendant(scheduleItem)"
                     >
                     </kendo-dropdownlist>
+                    <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChangeForAttendant(scheduleItem)">
+                        <i class='bx bx-x' ></i>
+                    </button>
+                    <button class="btn btn-default">
+                        <i class='bx bx-history'></i>
+                    </button>  
+                </div>
+                <div class="d-flex align-items-center mb-2" style="column-gap:10px;">
                     <kendo-dropdownlist style="margin-bottom:.5rem"
                         [data]="filteredAttendants"
                         [filterable]="true"
@@ -90,17 +133,52 @@
                         (ngModelChange)="onModelChangeForAttendant(scheduleItem)"
                         >
                     </kendo-dropdownlist>
-                </div>
-            </div>
-
-            <div class="col-12 d-flex justify-content-between align-items-center mt-3">
-                <div>
-                    <button (click)="changeCategory(-1)"  *ngIf="currentCategory !== midWeekCategories.OPENING" class="btn btn-default">Previous</button>
-                </div>
-                <div>
-                    <button (click)="changeCategory(1)" *ngIf="currentCategory !== midWeekCategories.ATTENDANTS" class="btn btn-default">Next</button>
+                    <button class="btn bg-red text-white" (click)="clearValue(scheduleItem,'partnerPublisher');onModelChangeForAttendant(scheduleItem)">
+                        <i class='bx bx-x' ></i>
+                    </button>
+                    <button class="btn btn-default">
+                        <i class='bx bx-history'></i>
+                    </button>  
                 </div>
             </div>
         </div>
+
+        <div class="col-12 d-flex justify-content-between align-items-center mt-3">
+            <div>
+                <button (click)="changeCategory(-1)"  *ngIf="currentCategory !== midWeekCategories.OPENING" class="btn btn-default">Previous</button>
+            </div>
+            <div>
+                <button (click)="changeCategory(1)" *ngIf="currentCategory !== midWeekCategories.ATTENDANTS" class="btn btn-default">Next</button>
+                <button (click)="submit()" *ngIf="currentCategory === midWeekCategories.ATTENDANTS" class="btn bg-green text-white">Submit</button>
+            </div>
+        </div>
     </div>
+    <div class="col-12 col-md-4 col-xxl-6">
+        <div class="bg-default p-2 text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">Publisher Recent Parts</h3>
+        </div>
+        <div class="py-2 border border-secondary d-flex justify-content-center align-items-center" style="min-height:200px;">
+            <div class="row">
+                <div class="col-12 text-center px-5">
+                    <p class="p-0 m-0" style="color: #0000007a;">Click the history button (<i class='bx bx-history'></i>) beside the publisher name to see their recent part.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-none bg-default p-2 text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">Francisco Cebu</h3>
+            <label style="font-weight:400">Recent Parts</label>
+        </div>
+        <div class="d-none py-2" style="min-height:200px;">
+            <div class="row">
+                <div class="col-12">
+                    <kendo-grid [data]="[]">
+                        <kendo-grid-column field="date" title="Date Part"> </kendo-grid-column>
+                        <kendo-grid-column field="category" title="Category"> </kendo-grid-column>
+                        <kendo-grid-column field="role" title="Role"> </kendo-grid-column>
+                    </kendo-grid>
+                </div>
+            </div>
+        </div>
+    </div>            
 </div>
