list of mid week schedule adding and editing

--- a/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
@@ -4,11 +4,15 @@
         <div class="col-12 col-md-2">
             <kendo-datepicker [(ngModel)]="midWeekSchedule.scheduledDate" (ngModelChange)="onScheduleDateChange()"></kendo-datepicker>
         </div>
+
+        <div class="my-2">
+            <p class="fs-2 m-0 p-0 text-red">{{message}}</p>
+        </div>
     </div>
 </div>
 
 <div class="row mt-2">
-    <div class="col-12 col-md-8 col-xxl-6">
+    <div class="col-12 col-lg-8 col-xxl-6 mb-2">
         <div *ngIf="currentCategory === midWeekCategories.OPENING" class="bg-default p-2 text-center mb-2" style="font-weight:700">
             <h3 class="p-0 m-0">Opening</h3>
         </div>
@@ -37,13 +41,13 @@
                         valueField="publisherId"
                         (filterChange)="handleFilter($event)"
                         [(ngModel)]="scheduleItem.publisher"
-                        (ngModelChange)="onModelChange(scheduleItem)"
+                        (ngModelChange)="onModelChange(scheduleItem);loadPublisherRecentParts(scheduleItem.publisher.publisherId)"
                         >
                     </kendo-dropdownlist>
                     <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
                         <i class='bx bx-x' ></i>
                     </button>
-                    <button class="btn btn-default">
+                    <button class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                         <i class='bx bx-history'></i>
                     </button>
                 </div>
@@ -55,12 +59,12 @@
                         valueField="publisherId"
                         (filterChange)="handleFilterForElderMs($event)"
                         [(ngModel)]="scheduleItem.publisher"
-                        (ngModelChange)="onModelChange(scheduleItem)">
+                        (ngModelChange)="onModelChange(scheduleItem);loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                     </kendo-dropdownlist>
                     <button class="btn bg-red text-white"  (click)="clearValue(scheduleItem,'publisher')">
                         <i class='bx bx-x' ></i>
                     </button>
-                    <button class="btn btn-default">
+                    <button class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                         <i class='bx bx-history'></i>
                     </button>                    
                 </div>
@@ -74,13 +78,13 @@
                         valueField="publisherId"
                         (filterChange)="handleFilter($event)"
                         [(ngModel)]="scheduleItem.publisher"
-                        (ngModelChange)="onModelChange(scheduleItem)"
+                        (ngModelChange)="onModelChange(scheduleItem);loadPublisherRecentParts(scheduleItem.publisher.publisherId)"
                     >
                     </kendo-dropdownlist> 
                     <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
                         <i class='bx bx-x' ></i>
                     </button> 
-                    <button class="btn btn-default">
+                    <button class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                         <i class='bx bx-history'></i>
                     </button>                  
                 </div>
@@ -92,13 +96,13 @@
                         valueField="publisherId"
                         (filterChange)="handleFilter($event)"
                         [(ngModel)]="scheduleItem.partnerPublisher"
-                        (ngModelChange)="onModelChange(scheduleItem,true)"
+                        (ngModelChange)="onModelChange(scheduleItem,true);loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)"
                         >
                     </kendo-dropdownlist>
                     <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'partnerPublisher');onModelChange(scheduleItem,true)">
                         <i class='bx bx-x' ></i>
                     </button>
-                    <button class="btn btn-default">
+                    <button class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
                         <i class='bx bx-history'></i>
                     </button>                        
                 </div>
@@ -112,13 +116,13 @@
                         valueField="publisherId"
                         (filterChange)="handleFilterForAttendants($event)"
                         [(ngModel)]="scheduleItem.publisher"
-                        (ngModelChange)="onModelChangeForAttendant(scheduleItem)"
+                        (ngModelChange)="onModelChangeForAttendant(scheduleItem);loadPublisherRecentParts(scheduleItem.publisher.publisherId)"
                     >
                     </kendo-dropdownlist>
                     <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChangeForAttendant(scheduleItem)">
                         <i class='bx bx-x' ></i>
                     </button>
-                    <button class="btn btn-default">
+                    <button class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                         <i class='bx bx-history'></i>
                     </button>  
                 </div>
@@ -130,13 +134,13 @@
                         valueField="publisherId"
                         (filterChange)="handleFilterForAttendants($event)"
                         [(ngModel)]="scheduleItem.partnerPublisher"
-                        (ngModelChange)="onModelChangeForAttendant(scheduleItem)"
+                        (ngModelChange)="onModelChangeForAttendant(scheduleItem);loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)"
                         >
                     </kendo-dropdownlist>
                     <button class="btn bg-red text-white" (click)="clearValue(scheduleItem,'partnerPublisher');onModelChangeForAttendant(scheduleItem)">
                         <i class='bx bx-x' ></i>
                     </button>
-                    <button class="btn btn-default">
+                    <button class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
                         <i class='bx bx-history'></i>
                     </button>  
                 </div>
@@ -153,11 +157,11 @@
             </div>
         </div>
     </div>
-    <div class="col-12 col-md-4 col-xxl-6">
-        <div class="bg-default p-2 text-center mb-2" style="font-weight:700">
+    <div class="col-12 col-lg-4 col-xxl-6">
+        <div *ngIf="!selectedPublisher" class="bg-default p-2 text-center mb-2" style="font-weight:700">
             <h3 class="p-0 m-0">Publisher Recent Parts</h3>
         </div>
-        <div class="py-2 border border-secondary d-flex justify-content-center align-items-center" style="min-height:200px;">
+        <div *ngIf="!selectedPublisher" class="py-2 border border-secondary d-flex justify-content-center align-items-center" style="min-height:200px;">
             <div class="row">
                 <div class="col-12 text-center px-5">
                     <p class="p-0 m-0" style="color: #0000007a;">Click the history button (<i class='bx bx-history'></i>) beside the publisher name to see their recent part.</p>
@@ -165,17 +169,39 @@
             </div>
         </div>
 
-        <div class="d-none bg-default p-2 text-center mb-2" style="font-weight:700">
-            <h3 class="p-0 m-0">Francisco Cebu</h3>
+        <div *ngIf="selectedPublisher" class="bg-default p-2 text-center mb-2" style="font-weight:700">
+            <h3 class="p-0 m-0">{{selectedPublisher.fullName}}</h3>
             <label style="font-weight:400">Recent Parts</label>
         </div>
-        <div class="d-none py-2" style="min-height:200px;">
+        <div *ngIf="selectedPublisher" class="py-2" style="min-height:200px;">
             <div class="row">
                 <div class="col-12">
-                    <kendo-grid [data]="[]">
-                        <kendo-grid-column field="date" title="Date Part"> </kendo-grid-column>
-                        <kendo-grid-column field="category" title="Category"> </kendo-grid-column>
-                        <kendo-grid-column field="role" title="Role"> </kendo-grid-column>
+                    <kendo-grid [data]="selectedPublisher.recentParts">
+                        <kendo-grid-column field="date" title="Date Part" [width]="100">
+                            <ng-template kendoGridCellTemplate let-dataItem>
+                                <span >{{ dataItem.date | date }}</span>
+                            </ng-template>
+                        </kendo-grid-column>
+                        <kendo-grid-column field="part.category" title="Category">
+                            <ng-template kendoGridCellTemplate let-dataItem>
+                                <div *ngIf="dataItem.part.category === midWeekCategories.OPENING">
+                                    <span class="p-0 m-0">Opening</span>
+                                </div>
+                                <div *ngIf="dataItem.part.category === midWeekCategories.TREASUREFROMGODSWORD">
+                                    <span class="p-0 m-0">TREASURE FROM GOD’S WORD</span>
+                                </div>
+                                <div *ngIf="dataItem.part.category === midWeekCategories.APPLYYOURSELFTOTHEFIELDMINISTRY">
+                                    <span class="p-0 m-0">Apply Yourself To The Field Ministry</span>
+                                </div>
+                                <div *ngIf="dataItem.part.category === midWeekCategories.LIVINGASACHRISTIAN">
+                                    <span class="p-0 m-0">Living as a Christian</span>
+                                </div>
+                                <div *ngIf="dataItem.part.category === midWeekCategories.ATTENDANTS">
+                                    <span class="p-0 m-0">Attendants</span>
+                                </div>
+                            </ng-template>
+                        </kendo-grid-column>
+                        <kendo-grid-column field="part.role" title="Role"  [width]="130"> </kendo-grid-column>
                     </kendo-grid>
                 </div>
             </div>
