--- a/JWDataTrackerWeb/src/app/pages/mid-week-schedule/mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/pages/mid-week-schedule/mid-week-schedule.component.html
@@ -1,81 +1,70 @@
 <div class="container" style="margin-bottom:6rem;">
     <div class="row">
         <div class="mt-3 col-12 d-flex align-items-center justify-content-between">
-            <button class="btn btn-default" style="width:10%">Previous</button>
             <h3>Mid Week Meeting Schedules</h3>
-            <button class="btn btn-default" style="width:10%">Next</button>
+            <button class="btn btn-default" (click)="openMidWeekModal()">Create Schedule</button>
         </div>
         <div class="col-12">
             <hr/>
         </div>
-        <div class="col-12 col-lg-4">
+        <div class="col-12">
+            <kendo-datapager
+                [total]="schedules.totalCount"
+                [pageSize]="pageSize"
+                [skip]="skip"
+                (pageChange)="pageChange($event)"
+                [pageSizeValues]="false"
+            >
+            </kendo-datapager>            
+        </div>
+        <div class="col-12 col-md-6 col-lg-4" *ngFor="let schedule of schedules.data">
             <div class="card">
                 <div class="card-header">
                     <div class="row">
                         <div class="col-12 fw-bold text-center">
-                            June 17
+                            {{schedule.scheduleDT | date}}
                         </div>
                     </div>
                 </div>
                 <div class="card-body p-2">
-                    <div class="d-flex justify-content-between">
-                        <label>Chairman</label>
-                        <label class="fw-bold text-end">Joseph Bangayan</label>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <label>Opening Prayer</label>
-                        <label class="fw-bold text-end">Elvis Lorenzo</label>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <label>Closing Prayer</label>
-                        <label class="fw-bold text-end">Niño Abarial</label>
-                    </div> 
-                    <div class="section-header gray">
-                        <span>TREASURE FROM GOD'S WORD</span>
-                        <div></div>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <label>Instructional Talk</label>
-                        <label class="fw-bold text-end">Joseph Bangayan</label>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <label>Spiritual Gem</label>
-                        <label class="fw-bold text-end">Elvis Lorenzo</label>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <label>Bible Reading</label>
-                        <label class="fw-bold text-end">Niño Abarial</label>
-                    </div> 
-                    <div class="section-header yellow">
-                        <span>APPLY YOURSELF TO THE FIELD MINISTRY</span>
-                        <div></div>
-                    </div>
-                    <div class="d-flex justify-content-between border-secondary border-bottom pb-2">
-                        <label>Video Discussion</label>
-                        <label class="fw-bold text-end">Niño Abarial</label>
-                    </div> 
-                    <div class="d-flex justify-content-between align-items-center border-secondary border-bottom pb-2">
-                        <label>First Part</label>
-                        <div>
-                            <label class="fw-bold text-end">Niño Abarial</label><br/>
-                            <label class="fw-bold text-end">Niño Abarial</label>
+                    <div *ngFor="let category of categoryArrangement">
+                        <div class="section-header gray" *ngIf="category === midWeekCategories.TREASUREFROMGODSWORD">
+                            <span>
+                                TREASURE FROM GOD’S WORD
+                            </span>
+                            <div></div>
                         </div>
-                    </div> 
-                    <div class="section-header red">
-                        <span>TREASURE FROM GOD</span>
-                        <div></div>
-                    </div> 
-                    <div class="section-header blue">
-                        <span>ATTENDANTS</span>
-                        <div></div>
-                    </div> 
+                        <div class="section-header yellow" *ngIf="category === midWeekCategories.APPLYYOURSELFTOTHEFIELDMINISTRY">
+                            <span>
+                                Apply Yourself To The Field Ministry
+                            </span>
+                            <div></div>
+                        </div>
+                        <div class="section-header red" *ngIf="category === midWeekCategories.LIVINGASACHRISTIAN">
+                            <span>
+                                Living as a Christian
+                            </span>
+                            <div></div>
+                        </div>
+                        <div class="section-header blue" *ngIf="category === midWeekCategories.ATTENDANTS">
+                            <span >
+                                Attendants
+                            </span>
+                            <div></div>
+                        </div>
+                        
+                        <div *ngFor="let scheduleItem of filterByCategory(category,schedule)">
+                            <div *ngIf="scheduleItem.publisher" class="d-flex justify-content-between align-items-center border-secondary border-bottom pb-2">
+                                <label>{{scheduleItem.role}}</label>
+                                <div>
+                                    <p class="m-0 p-0 fw-bold text-end" *ngIf="scheduleItem.publisher">{{scheduleItem.publisher.fullName}}</p>
+                                    <p class="m-0 p-0 fw-bold text-end" *ngIf="scheduleItem.partnerPublisher">{{scheduleItem.partnerPublisher.fullName}}</p>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-12 col-lg-4">
-            <div class="empty-schedule" (click)="openMidWeekModal()">
-                <i class='bx bx-calendar-plus'></i>
-            </div>
-        </div>        
+        </div>      
     </div>
 </div>
